--- a/cliente/package.json
+++ b/cliente/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "jquery": "^3.6.4",
     "morgan": "^1.10.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
